--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <style>
+    html,
     body {
       background-color: #101016;
       color: #2CC1EB;
@@ -25,6 +26,8 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      overflow: hidden;
+      width: 100%;
     }
 
     .top-bar {
@@ -53,6 +56,7 @@
       transform: translateX(-50%);
       display: flex;
       gap: 20px;
+      margin-bottom: 50px;
     }
 
     .social-links a {
