--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h1>Së Shpejti</h1>
   <div class="social-links">
     <a href="https://www.instagram.com/investeks/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    <a href="https://www.facebook.com/investeks.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.facebook.com/people/Investeks/61573447977447/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
   </div>
 </body>
 
